tests/rosetta/out/Rust/call-a-foreign-language-function.rs
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:39:55Z
fn main() {
    fn strdup(s: &'static str) -> &'static str {
        return format!("{}{}", s, "");
    }
    fn main() -> () {
        let go1 = "hello C";
        let c2 = strdup(go1);
        println!("{}", c2);
    }
    main();
}
